# spanner-db-latency-comparison

./: .gitignore  LICENSE  README.md  flake.nix  googlesql.sql  psql.sql  reportFile.html  reportFile.md  result.md  spanner-db-latency-test.cabal
src/: Main.hs
